# testbench -- offset-swept single-SEU register fault, dual-core diagnostic.
cmake_minimum_required(VERSION 3.13)
set(CMAKE_C_STANDARD 11)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
if(WIN32)
    set(USERHOME $ENV{USERPROFILE})
else()
    set(USERHOME $ENV{HOME})
endif()
set(sdkVersion 2.2.0)
set(toolchainVersion 14_2_Rel1)
set(picotoolVersion 2.2.0-a4)
set(picoVscode ${USERHOME}/.pico-sdk/cmake/pico-vscode.cmake)
if (EXISTS ${picoVscode})
    include(${picoVscode})
endif()
set(PICO_BOARD pico CACHE STRING "Board type")
include(pico_sdk_import.cmake)
project(testbench C CXX ASM)
pico_sdk_init()

# Sweep parameters (overridable via -D)
set(SEU_FRAME_WORD 0 CACHE STRING "stacked reg: 0=r0..3=r3,4=r12")
set(SEU_BIT        3 CACHE STRING "bit to flip")

set(progs quicksort matrix euler)
set(flag_quicksort PROGRAM_QUICKSORT)
set(flag_matrix    PROGRAM_MATRIX)
set(flag_euler     PROGRAM_EULER)

foreach(prog ${progs})
    # golden
    add_executable(inject_${prog}_GOLDEN fault_injector.c)
    target_compile_definitions(inject_${prog}_GOLDEN PRIVATE ${flag_${prog}} MODE_GOLDEN)
    pico_set_program_name(inject_${prog}_GOLDEN "inject_${prog}_GOLDEN")
    pico_enable_stdio_uart(inject_${prog}_GOLDEN 0)
    pico_enable_stdio_usb(inject_${prog}_GOLDEN 1)
    target_link_libraries(inject_${prog}_GOLDEN pico_stdlib hardware_timer hardware_irq pico_multicore)
    target_include_directories(inject_${prog}_GOLDEN PRIVATE ${CMAKE_CURRENT_LIST_DIR})
    pico_add_extra_outputs(inject_${prog}_GOLDEN)

    # faulty
    add_executable(inject_${prog}_FAULTY fault_injector.c)
    target_compile_definitions(inject_${prog}_FAULTY PRIVATE ${flag_${prog}} MODE_FAULTY
        SEU_FRAME_WORD=${SEU_FRAME_WORD}
        SEU_BIT=${SEU_BIT})
    pico_set_program_name(inject_${prog}_FAULTY "inject_${prog}_FAULTY")
    pico_enable_stdio_uart(inject_${prog}_FAULTY 0)
    pico_enable_stdio_usb(inject_${prog}_FAULTY 1)
    target_link_libraries(inject_${prog}_FAULTY pico_stdlib hardware_timer hardware_irq pico_multicore)
    target_include_directories(inject_${prog}_FAULTY PRIVATE ${CMAKE_CURRENT_LIST_DIR})
    pico_add_extra_outputs(inject_${prog}_FAULTY)
endforeach()
